--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://unpkg.com/@maptiler/geocoding-control@latest/style.css" rel="stylesheet" />
 
     <!-- Import Turff.js from unpkg -->
-    <script src="https://unpkg.com/@turf/turf@latest"></script>
+    <script src="https://unpkg.com/@turf/turf@6.5.0/turf.min.js"></script>
 </head>
 <body>
 
