Dynamic products/pricing

--- a/index.html
+++ b/index.html
@@ -16,24 +16,170 @@
     <script src="https://unpkg.com/@turf/turf@6.5.0/turf.min.js"></script>
 </head>
 <body>
+    <div class="w-dyn-list">
+        <div role="list" class="iq-pricing-database w-dyn-items">
+            <div role="listitem" class="iq-option w-dyn-item">
+                <div class="iq-category-name">Gutters</div>
+                <div class="iq-service-name">Gutter Install</div>
+                <div class="iq-product-name">Edco 5&quot; Seamless Aluminum Gutters</div>
+                <div class="iq-price-formula-low">{{gutterLength}} * 1.75 * 7.5</div>
+                <div class="iq-price-formula-high">{{gutterLength}} * 2 * 7.5</div>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo.png" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo-p-500.png 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo-p-800.png 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo.png 900w" class="iq-brand-logo"/>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb.jpg" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb-p-500.jpg 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb-p-800.jpg 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb-p-1080.jpg 1080w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb.jpg 1380w" class="iq-product-thumbnail"/>
+            </div>
+            <div role="listitem" class="iq-option w-dyn-item">
+                <div class="iq-category-name">Gutters</div>
+                <div class="iq-service-name">Gutter Install</div>
+                <div class="iq-product-name">Edco 5&quot; Seamless Aluminum Gutters</div>
+                <div class="iq-price-formula-low">{{gutterLength}} * 1.75 * 6.5</div>
+                <div class="iq-price-formula-high">{{gutterLength}} * 2 * 6.5</div>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo.png" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo-p-500.png 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo-p-800.png 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo.png 900w" class="iq-brand-logo"/>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb.jpg" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb-p-500.jpg 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb-p-800.jpg 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb-p-1080.jpg 1080w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb.jpg 1380w" class="iq-product-thumbnail"/>
+            </div>
+            <div role="listitem" class="iq-option w-dyn-item">
+                <div class="iq-category-name">Gutters</div>
+                <div class="iq-service-name">Gutter Replacement</div>
+                <div class="iq-product-name">Edco 6&quot; XL Seamless Aluminum Gutters</div>
+                <div class="iq-price-formula-low">{{gutterLength}} * 1.75 * 8</div>
+                <div class="iq-price-formula-high">{{gutterLength}} * 2 * 8</div>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo.png" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo-p-500.png 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo-p-800.png 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo.png 900w" class="iq-brand-logo"/>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb.jpg" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb-p-500.jpg 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb-p-800.jpg 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb-p-1080.jpg 1080w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb.jpg 1380w" class="iq-product-thumbnail"/>
+            </div>
+            <div role="listitem" class="iq-option w-dyn-item">
+                <div class="iq-category-name">Gutters</div>
+                <div class="iq-service-name">Gutter Replacement</div>
+                <div class="iq-product-name">Edco 5&quot; Seamless Aluminum Gutters</div>
+                <div class="iq-price-formula-low">{{gutterLength}} * 1.75 * 7</div>
+                <div class="iq-price-formula-high">{{gutterLength}} * 2 * 7</div>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo.png" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo-p-500.png 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo-p-800.png 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc903265481f179df017_edco-logo.png 900w" class="iq-brand-logo"/>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb.jpg" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb-p-500.jpg 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb-p-800.jpg 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb-p-1080.jpg 1080w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc9a92452525bf0b64fa_edco-gutters-thumb.jpg 1380w" class="iq-product-thumbnail"/>
+            </div>
+            <div role="listitem" class="iq-option w-dyn-item">
+                <div class="iq-category-name">Siding</div>
+                <div class="iq-service-name">Siding Replacement</div>
+                <div class="iq-product-name">Westlake Market Square</div>
+                <div class="iq-price-formula-low">{{wallArea}} * 7</div>
+                <div class="iq-price-formula-high">{{wallArea}} * 9</div>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc2149eca1e8f006174a_westlake-logo.png" loading="lazy" alt="" height="25" class="iq-brand-logo"/>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc35c4c34e84f78b270c_market-square-thumb.png" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc35c4c34e84f78b270c_market-square-thumb-p-500.png 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc35c4c34e84f78b270c_market-square-thumb-p-800.png 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fc35c4c34e84f78b270c_market-square-thumb.png 890w" class="iq-product-thumbnail"/>
+            </div>
+            <div role="listitem" class="iq-option w-dyn-item">
+                <div class="iq-category-name">Siding</div>
+                <div class="iq-service-name">Siding Replacement</div>
+                <div class="iq-product-name">LP SmartSide</div>
+                <div class="iq-price-formula-low">{{wallArea}} * 9</div>
+                <div class="iq-price-formula-high">{{wallArea}} * 11</div>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fb93ee592a1b028b904e_lp-logo.jpg" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fb93ee592a1b028b904e_lp-logo-p-500.jpg 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fb93ee592a1b028b904e_lp-logo-p-800.jpg 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fb93ee592a1b028b904e_lp-logo-p-1080.jpg 1080w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fb93ee592a1b028b904e_lp-logo.jpg 1500w" class="iq-brand-logo"/>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fbc99c20996c0d90a2a7_lp-smartside-thumb.png" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fbc99c20996c0d90a2a7_lp-smartside-thumb-p-500.png 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fbc99c20996c0d90a2a7_lp-smartside-thumb-p-800.png 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fbc99c20996c0d90a2a7_lp-smartside-thumb-p-1080.png 1080w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fbc99c20996c0d90a2a7_lp-smartside-thumb.png 1600w" class="iq-product-thumbnail"/>
+            </div>
+            <div role="listitem" class="iq-option w-dyn-item">
+                <div class="iq-category-name">Roofing</div>
+                <div class="iq-service-name">Roof Replacement</div>
+                <div class="iq-product-name">Atlas Pinnacle Impact</div>
+                <div class="iq-price-formula-low">{{roofArea}} * 6</div>
+                <div class="iq-price-formula-high">{{roofArea}} * 7</div>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo.jpg" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo-p-500.jpg 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo-p-800.jpg 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo-p-1080.jpg 1080w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo-p-1600.jpg 1600w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo-p-2000.jpg 2000w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo-p-2600.jpg 2600w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo.jpg 3190w" class="iq-brand-logo"/>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fb6099227bfe72e923d1_atlas-pinnacle-impact-thumb.jpg" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fb6099227bfe72e923d1_atlas-pinnacle-impact-thumb-p-500.jpg 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fb6099227bfe72e923d1_atlas-pinnacle-impact-thumb-p-800.jpg 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fb6099227bfe72e923d1_atlas-pinnacle-impact-thumb-p-1080.jpg 1080w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967fb6099227bfe72e923d1_atlas-pinnacle-impact-thumb.jpg 1226w" class="iq-product-thumbnail"/>
+            </div>
+            <div role="listitem" class="iq-option w-dyn-item">
+                <div class="iq-category-name">Roofing</div>
+                <div class="iq-service-name">Roof Replacement</div>
+                <div class="iq-product-name">Atlas Pinnacle Pristine</div>
+                <div class="iq-price-formula-low">{{roofArea}} * 5</div>
+                <div class="iq-price-formula-high">{{roofArea}} * 6</div>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo.jpg" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo-p-500.jpg 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo-p-800.jpg 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo-p-1080.jpg 1080w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo-p-1600.jpg 1600w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo-p-2000.jpg 2000w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo-p-2600.jpg 2600w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f4560782b12e2f2a8a44_atlas-logo.jpg 3190w" class="iq-brand-logo"/>
+                <img src="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f46fb0de9f2e02654703_atlas-pinnacle-pristine-thumb.jpg" loading="lazy" alt="" height="25" sizes="100vw" srcset="https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f46fb0de9f2e02654703_atlas-pinnacle-pristine-thumb-p-500.jpg 500w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f46fb0de9f2e02654703_atlas-pinnacle-pristine-thumb-p-800.jpg 800w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f46fb0de9f2e02654703_atlas-pinnacle-pristine-thumb-p-1080.jpg 1080w, https://cdn.prod.website-files.com/67b4ec9fc354f927e25cade0/6967f46fb0de9f2e02654703_atlas-pinnacle-pristine-thumb.jpg 1226w" class="iq-product-thumbnail"/>
+            </div>
+        </div>
+    </div>
 
     <h1>Instant Quote</h1>
     
     <div id="iq-main">
 
-        <div id="iq-top-container">
-
-        </div>
-
-        <div id="iq-middle-container">
-            <div id="iq-map-wrapper">
-                <div id="iq-map"></div>
+        <!-- Step Indicator -->
+        <div id="iq-step-indicator">
+            <div class="iq-step iq-step-active" data-step="1">
+                <div class="iq-step-number">1</div>
+                <div class="iq-step-label">Type of Work</div>
+            </div>
+            <div class="iq-step-connector"></div>
+            <div class="iq-step" data-step="2">
+                <div class="iq-step-number">2</div>
+                <div class="iq-step-label">Service</div>
+            </div>
+            <div class="iq-step-connector"></div>
+            <div class="iq-step" data-step="3">
+                <div class="iq-step-number">3</div>
+                <div class="iq-step-label">Find Property</div>
+            </div>
+            <div class="iq-step-connector"></div>
+            <div class="iq-step" data-step="4">
+                <div class="iq-step-number">4</div>
+                <div class="iq-step-label">Confirm Details</div>
+            </div>
+            <div class="iq-step-connector"></div>
+            <div class="iq-step" data-step="5">
+                <div class="iq-step-number">5</div>
+                <div class="iq-step-label">See Pricing</div>
             </div>
         </div>
 
-        <div id="iq-bottom-container">
+        <!-- Step 1: Choose Category -->
+        <div id="iq-view-1" class="iq-view iq-view-active">
+            <h2 class="iq-view-title">What type of work do you need?</h2>
+            <p class="iq-view-subtitle">Select a category to get started</p>
+            <div id="iq-category-list" class="iq-option-list"></div>
+        </div>
+
+        <!-- Step 2: Choose Service -->
+        <div id="iq-view-2" class="iq-view">
+            <h2 class="iq-view-title">What service do you need?</h2>
+            <p class="iq-view-subtitle">Select a service</p>
+            <div id="iq-service-list" class="iq-option-list"></div>
+            <div class="iq-nav-buttons">
+                <button id="iq-back-step2" class="iq-button iq-button-secondary">Back</button>
+            </div>
+        </div>
+
+        <!-- Step 3: Find Property -->
+        <div id="iq-view-3" class="iq-view">
+            <div id="iq-top-container"></div>
+            <div id="iq-middle-container">
+                <div id="iq-map-wrapper">
+                    <div id="iq-map"></div>
+                </div>
+            </div>
+            <div id="iq-step3-bottom">
+                <p id="iq-step3-hint">Search for your address, then click on each structure you'd like included in your quote.</p>
+                <div id="iq-selected-summary"></div>
+                <div class="iq-nav-buttons">
+                    <button id="iq-back-step3" class="iq-button iq-button-secondary">Back</button>
+                    <button id="iq-next-step3" class="iq-button" disabled>Continue</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Step 4: Confirm Selection -->
+        <div id="iq-view-4" class="iq-view">
+            <h2 class="iq-view-title">Confirm Details</h2>
+            <p class="iq-view-subtitle" id="iq-step4-subtitle">Answer a few questions about each structure</p>
             <ul id="iq-structure-list"></ul>
-            <button id="iq-get-quote" class="iq-button" disabled>See Pricing</button>
+            <div class="iq-nav-buttons">
+                <button id="iq-back-step4" class="iq-button iq-button-secondary">Back</button>
+                <button id="iq-next-step4" class="iq-button" disabled>See Pricing</button>
+            </div>
+        </div>
+
+        <!-- Step 5: See Pricing -->
+        <div id="iq-view-5" class="iq-view">
+            <h2 class="iq-view-title">Your Estimate</h2>
+            <p class="iq-view-subtitle" id="iq-step5-subtitle">Here's your instant estimate</p>
+            <div id="iq-pricing-breakdown"></div>
+            <div class="iq-nav-buttons">
+                <button id="iq-back-step5" class="iq-button iq-button-secondary">Back</button>
+                <button id="iq-start-over" class="iq-button">Start Over</button>
+            </div>
         </div>
 
     </div>
